feat: real-time messaging, regex parser, and UI skeleton loaders